--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "7.0",
     "gulp-notify": "^4.0.0",
     "gulp-sass": "^5.1.0",
